--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;500;700&display=swap');
+
+h1 , p , li , button{
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
+  
+}
+
+body{
+  padding: 1.5rem 5rem 0 5rem;
+}
+ 
+
 .App {
   text-align: center;
 }
